--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -232,3 +232,23 @@ footer {
   }
 }
 }
+
+.swiper {
+  width: 100%;
+  height: 300px;
+}
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
